adding routing. fourth part

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,11 +1,11 @@
 <nav class=" d-flex flex-row flex-justify-content-between flex-align-item-center p-10">
-    <a href="" class="logo">littleFootCocktails</a>
+    <a routerLink="cocktails" class="logo">littleFootCocktails</a>
     <ul>
-        <li>
-            <a href="">Recettes</a>
+        <li routerLink="cocktails" routerLinkActive="active">
+            Recettes
         </li>
-        <li>
-            <a href="">Ingredients</a>
+        <li routerLink="panier" routerLinkActive="active">
+            ingredients
         </li>
     </ul>
 </nav>
