--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -11,6 +11,9 @@ ul {
     li{
         display: inline-block;
         padding: 10px 20px;
+        border-radius: 3px;
+        margin-right: 10px;
+        cursor: pointer;
         &:hover {
             background-color: var(--secondary);
         }
