--- a/src/styles.scss
+++ b/src/styles.scss
@@ -82,12 +82,8 @@ body {
     margin-bottom: 20px;
 }
 //theme 
-
-.list-primary {
-    li{
-        padding: 10px 15px;
-        border: 1px solid var(--lightgray);
-        border-top: 0;
+.list-primary-action {
+    li {
         &:hover {
             background-color: var(--primary);
             color: white;
@@ -95,6 +91,14 @@ body {
             cursor: pointer;
         }
         transition: all 0.4s
+    }
+}
+
+.list-primary {
+    li{
+        padding: 10px 15px;
+        border: 1px solid var(--lightgray);
+        border-top: 0;
     }
     li:first-child {
         border-top: 1px solid var(--lightgray);
@@ -122,7 +126,18 @@ body {
         transition: all 0.4s
     }
 }
-
+.badge {
+    background-color: var(--secondary);
+    border-radius: 3px;
+    padding:2px 5px;
+    color:white;
+    font-size: 12px;
+    font-weight: 500;
+}
+.active {
+    background-color: var(--secondary);
+    color: white;
+}
 //debug 
 .d1 {
     border: 1px solid red;
