adding formulaire. fifth part of project

--- a/src/app/cocktail-container/cocktail-form/cocktail-form.component.html
+++ b/src/app/cocktail-container/cocktail-form/cocktail-form.component.html
@@ -1,1 +1,33 @@
-<p>cocktail-form works!</p>
+<form [formGroup]="cocktailForm" (ngSubmit)="submit">
+    <div class="form-group d-flex flex-column">
+        <label>Nom</label>
+        <input type="text" formControlName="name">
+    </div>
+    <div class="form-group d-flex flex-column">
+        <label>Image</label>
+        <input type="text" formControlName="img">
+    </div>
+    <div class="form-group d-flex flex-column">
+        <label>Description</label>
+        <input type="text" formControlName="description">
+    </div>
+    <hr>
+    <button (click)="addIngredient()" class="btn btn-primary" type="button">Ajouter ingredient</button>
+    <hr>
+    <div formArrayName="ingredients" class="">
+        <div [formGroupName]="index" *ngFor="let ingredient of ingredients.controls; let index = index">
+            <div class="form-group d-flex flex-column">
+                <label>Nom</label>
+                <input type="text" formControlName="name">
+            </div>
+            <div class="form-group d-flex flex-column">
+                <label>Quantité</label>
+                <input type="text" formControlName="number">
+            </div>
+        </div>
+    </div>
+    <div class="actions">
+        <button [disabled]="cocktailForm.invalid" class="btn btn-primary">Valider</button>
+        <button type="button" routerLink="../" class="btn btn-secondary">Annuler</button>
+    </div>
+</form>
