--- a/src/app/features/cocktail/cocktail-container/cocktail-container.component.html
+++ b/src/app/features/cocktail/cocktail-container/cocktail-container.component.html
@@ -1,9 +1,6 @@
-<div class="container d-flex flex-row p-20">
-  <app-cocktail-list
-  [cocktails]="cocktails$ | async"
-    class="flex-50 pr-10"
-  ></app-cocktail-list>
-  <div class="flex 50 pl-10">
+<div class="container d-flex flex-row">
+  <app-cocktail-list class="flex-50 pr-10"></app-cocktail-list>
+  <div class="flex-50 pl-10">
     <router-outlet></router-outlet>
   </div>
 </div>
