--- a/src/app/features/cocktail/cocktail-container/cocktail-details/cocktail-details.component.html
+++ b/src/app/features/cocktail/cocktail-container/cocktail-details/cocktail-details.component.html
@@ -9,8 +9,8 @@
       </li>
     </ul>
     <div class="d-flex flex-row flex-justify-content-between">
-      <button routerLink="edit" class="btn btn-primary">Editer le cocktail</button>
-      <button class="btn btn-primary" (click)="addToPanier()">Ajouter au panier</button>
+      <button routerLink="getUrl()" class="btn btn-primary">Editer le cocktail</button>
+      <button class="btn btn-primary" (click)="addToPanier(cocktail.ingredients)" routerLink="/panier">Ajouter au panier</button>
     </div>
   </div>
   
