--- a/src/app/features/cocktail/cocktail-container/cocktail-form/cocktail-form.component.html
+++ b/src/app/features/cocktail/cocktail-container/cocktail-form/cocktail-form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="cocktailForm" (ngSubmit)="submit">
+<form *ngIf="cocktailForm" [formGroup]="cocktailForm" (ngSubmit)="createCcocktail()">
     <div class="form-group d-flex flex-column">
         <label>Nom</label>
         <input type="text" formControlName="name">
@@ -15,7 +15,7 @@
     <button (click)="addIngredient()" class="btn btn-primary" type="button">Ajouter ingredient</button>
     <hr>
     <div formArrayName="ingredients" class="">
-        <div [formGroupName]="index" *ngFor="let ingredient of ingredients.controls; let index = index">
+        <div [formGroup]="ingredient" *ngFor="let ingredient of cocktailForm.get('ingredients')['controls']">
             <div class="form-group d-flex flex-column">
                 <label>Nom</label>
                 <input type="text" formControlName="name">
