--- a/src/app/features/cocktail/cocktail-container/cocktail-container.component.html
+++ b/src/app/features/cocktail/cocktail-container/cocktail-container.component.html
@@ -1,5 +1,8 @@
 <div class="container d-flex flex-row">
-  <app-cocktail-list class="flex-50 pr-10"></app-cocktail-list>
+  <app-cocktail-list 
+    [cocktails]="cocktails$"
+    class="flex-50 pr-10"
+    ></app-cocktail-list>
   <div class="flex-50 pl-10">
     <router-outlet></router-outlet>
   </div>
