--- a/src/app/features/cocktail/cocktail-container/cocktail-list/cocktail-list.component.html
+++ b/src/app/features/cocktail/cocktail-container/cocktail-list/cocktail-list.component.html
@@ -1,5 +1,9 @@
 <h3 class="mb-20">Liste des cocktails</h3>
-<input class='mb-20 w-100' type="text" [(ngModel)]="search" placeholder="Rechercher un cocktail">
+<input 
+  class='mb-20 w-100' 
+  type="text" 
+  [(ngModel)]="search" 
+  placeholder="Rechercher un cocktail">
 <ul *ngIf="cocktails" class="mb-20 list-primary-action">
   <li
     [routerLink]="[index]"
